--- a/hhsbot.ipynb
+++ b/hhsbot.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,15 +158,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
     "@bot.command()\n",
     "async def add(ctx, a, b):\n",
     "    \"\"\"Adds two numbers together.\"\"\"\n",
-    "    a+b\n",
-    "    pass\n",
+    "    await ctx.send(a+b)\n",
+    "    \n",
     "\n"
    ]
   },
@@ -182,18 +182,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 194,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (509423844.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[48], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    @app_commands.describe(a = \"1st number\", b = )\u001b[0m\n\u001b[0m                                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
@@ -215,28 +206,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 195,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "CommandRegistrationError",
-     "evalue": "The command dice is already an existing command or alias.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mCommandRegistrationError\u001b[0m                  Traceback (most recent call last)",
-      "\u001b[1;32m/Users/daniel/Documents/GitHub/hhs-ws-discord-bot/hhsbot.ipynb Cell 20\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/daniel/Documents/GitHub/hhs-ws-discord-bot/hhsbot.ipynb#Y313sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m@bot\u001b[39;49m\u001b[39m.\u001b[39;49mcommand()\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/daniel/Documents/GitHub/hhs-ws-discord-bot/hhsbot.ipynb#Y313sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39masync\u001b[39;49;00m \u001b[39mdef\u001b[39;49;00m \u001b[39mdice\u001b[39;49m(ctx):\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/daniel/Documents/GitHub/hhs-ws-discord-bot/hhsbot.ipynb#Y313sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m    x \u001b[39m=\u001b[39;49m random(\u001b[39m1\u001b[39;49m,\u001b[39m6\u001b[39;49m)\n",
-      "File \u001b[0;32m~/miniforge3/envs/jupyter/lib/python3.9/site-packages/discord/ext/commands/core.py:1521\u001b[0m, in \u001b[0;36mGroupMixin.command.<locals>.decorator\u001b[0;34m(func)\u001b[0m\n\u001b[1;32m   1519\u001b[0m kwargs\u001b[39m.\u001b[39msetdefault(\u001b[39m'\u001b[39m\u001b[39mparent\u001b[39m\u001b[39m'\u001b[39m, \u001b[39mself\u001b[39m)\n\u001b[1;32m   1520\u001b[0m result \u001b[39m=\u001b[39m command(name\u001b[39m=\u001b[39mname, \u001b[39mcls\u001b[39m\u001b[39m=\u001b[39m\u001b[39mcls\u001b[39m, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)(func)\n\u001b[0;32m-> 1521\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49madd_command(result)\n\u001b[1;32m   1522\u001b[0m \u001b[39mreturn\u001b[39;00m result\n",
-      "File \u001b[0;32m~/miniforge3/envs/jupyter/lib/python3.9/site-packages/discord/ext/commands/bot.py:246\u001b[0m, in \u001b[0;36mBotBase.add_command\u001b[0;34m(self, command)\u001b[0m\n\u001b[1;32m    244\u001b[0m \u001b[39m@discord\u001b[39m\u001b[39m.\u001b[39mutils\u001b[39m.\u001b[39mcopy_doc(GroupMixin\u001b[39m.\u001b[39madd_command)\n\u001b[1;32m    245\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39madd_command\u001b[39m(\u001b[39mself\u001b[39m, command: Command[Any, \u001b[39m.\u001b[39m\u001b[39m.\u001b[39m\u001b[39m.\u001b[39m, Any], \u001b[39m/\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m--> 246\u001b[0m     \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49madd_command(command)\n\u001b[1;32m    247\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(command, (HybridCommand, HybridGroup)) \u001b[39mand\u001b[39;00m command\u001b[39m.\u001b[39mapp_command:\n\u001b[1;32m    248\u001b[0m         \u001b[39m# If a cog is also inheriting from app_commands.Group then it'll also\u001b[39;00m\n\u001b[1;32m    249\u001b[0m         \u001b[39m# add the hybrid commands as text commands, which would recursively add the\u001b[39;00m\n\u001b[1;32m    250\u001b[0m         \u001b[39m# hybrid commands as slash commands. This check just terminates that recursion\u001b[39;00m\n\u001b[1;32m    251\u001b[0m         \u001b[39m# from happening\u001b[39;00m\n\u001b[1;32m    252\u001b[0m         \u001b[39mif\u001b[39;00m command\u001b[39m.\u001b[39mcog \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mor\u001b[39;00m \u001b[39mnot\u001b[39;00m command\u001b[39m.\u001b[39mcog\u001b[39m.\u001b[39m__cog_is_app_commands_group__:\n",
-      "File \u001b[0;32m~/miniforge3/envs/jupyter/lib/python3.9/site-packages/discord/ext/commands/core.py:1356\u001b[0m, in \u001b[0;36mGroupMixin.add_command\u001b[0;34m(self, command)\u001b[0m\n\u001b[1;32m   1353\u001b[0m     command\u001b[39m.\u001b[39mparent \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\n\u001b[1;32m   1355\u001b[0m \u001b[39mif\u001b[39;00m command\u001b[39m.\u001b[39mname \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mall_commands:\n\u001b[0;32m-> 1356\u001b[0m     \u001b[39mraise\u001b[39;00m CommandRegistrationError(command\u001b[39m.\u001b[39mname)\n\u001b[1;32m   1358\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mall_commands[command\u001b[39m.\u001b[39mname] \u001b[39m=\u001b[39m command\n\u001b[1;32m   1359\u001b[0m \u001b[39mfor\u001b[39;00m alias \u001b[39min\u001b[39;00m command\u001b[39m.\u001b[39maliases:\n",
-      "\u001b[0;31mCommandRegistrationError\u001b[0m: The command dice is already an existing command or alias."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "@bot.command()\n",
     "async def dice(ctx):\n",
-    "   x = random(1,6)\n",
+    "   x = random.randint(1,6)\n",
+    "   await ctx.send(x)\n",
     "   "
    ]
   },
@@ -252,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,14 +252,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
     "@bot.command()\n",
     "async def parrot(ctx, *args):\n",
     "   \"\"\"Responds with the text given\"\"\"\n",
-    "   ctx.send\n"
+    "   await ctx.send(\" \".join(args))\n"
    ]
   },
   {
@@ -297,24 +274,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 198,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "CommandRegistrationError",
-     "evalue": "The command mock is already an existing command or alias.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mCommandRegistrationError\u001b[0m                  Traceback (most recent call last)",
-      "\u001b[1;32m/Users/daniel/Documents/GitHub/hhs-ws-discord-bot/hhsbot.ipynb Cell 26\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/daniel/Documents/GitHub/hhs-ws-discord-bot/hhsbot.ipynb#Y322sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m@bot\u001b[39;49m\u001b[39m.\u001b[39;49mcommand()\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/daniel/Documents/GitHub/hhs-ws-discord-bot/hhsbot.ipynb#Y322sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39masync\u001b[39;49;00m \u001b[39mdef\u001b[39;49;00m \u001b[39mmock\u001b[39;49m(ctx, \u001b[39m*\u001b[39;49margs):\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/daniel/Documents/GitHub/hhs-ws-discord-bot/hhsbot.ipynb#Y322sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m   \u001b[39;49m\u001b[39m\"\"\"Responds with the given text with capitalization randomized\"\"\"\u001b[39;49;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/daniel/Documents/GitHub/hhs-ws-discord-bot/hhsbot.ipynb#Y322sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m    \u001b[39m# your code here\u001b[39;00m\n",
-      "File \u001b[0;32m~/miniforge3/envs/jupyter/lib/python3.9/site-packages/discord/ext/commands/core.py:1521\u001b[0m, in \u001b[0;36mGroupMixin.command.<locals>.decorator\u001b[0;34m(func)\u001b[0m\n\u001b[1;32m   1519\u001b[0m kwargs\u001b[39m.\u001b[39msetdefault(\u001b[39m'\u001b[39m\u001b[39mparent\u001b[39m\u001b[39m'\u001b[39m, \u001b[39mself\u001b[39m)\n\u001b[1;32m   1520\u001b[0m result \u001b[39m=\u001b[39m command(name\u001b[39m=\u001b[39mname, \u001b[39mcls\u001b[39m\u001b[39m=\u001b[39m\u001b[39mcls\u001b[39m, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)(func)\n\u001b[0;32m-> 1521\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49madd_command(result)\n\u001b[1;32m   1522\u001b[0m \u001b[39mreturn\u001b[39;00m result\n",
-      "File \u001b[0;32m~/miniforge3/envs/jupyter/lib/python3.9/site-packages/discord/ext/commands/bot.py:246\u001b[0m, in \u001b[0;36mBotBase.add_command\u001b[0;34m(self, command)\u001b[0m\n\u001b[1;32m    244\u001b[0m \u001b[39m@discord\u001b[39m\u001b[39m.\u001b[39mutils\u001b[39m.\u001b[39mcopy_doc(GroupMixin\u001b[39m.\u001b[39madd_command)\n\u001b[1;32m    245\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39madd_command\u001b[39m(\u001b[39mself\u001b[39m, command: Command[Any, \u001b[39m.\u001b[39m\u001b[39m.\u001b[39m\u001b[39m.\u001b[39m, Any], \u001b[39m/\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m--> 246\u001b[0m     \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49madd_command(command)\n\u001b[1;32m    247\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(command, (HybridCommand, HybridGroup)) \u001b[39mand\u001b[39;00m command\u001b[39m.\u001b[39mapp_command:\n\u001b[1;32m    248\u001b[0m         \u001b[39m# If a cog is also inheriting from app_commands.Group then it'll also\u001b[39;00m\n\u001b[1;32m    249\u001b[0m         \u001b[39m# add the hybrid commands as text commands, which would recursively add the\u001b[39;00m\n\u001b[1;32m    250\u001b[0m         \u001b[39m# hybrid commands as slash commands. This check just terminates that recursion\u001b[39;00m\n\u001b[1;32m    251\u001b[0m         \u001b[39m# from happening\u001b[39;00m\n\u001b[1;32m    252\u001b[0m         \u001b[39mif\u001b[39;00m command\u001b[39m.\u001b[39mcog \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mor\u001b[39;00m \u001b[39mnot\u001b[39;00m command\u001b[39m.\u001b[39mcog\u001b[39m.\u001b[39m__cog_is_app_commands_group__:\n",
-      "File \u001b[0;32m~/miniforge3/envs/jupyter/lib/python3.9/site-packages/discord/ext/commands/core.py:1356\u001b[0m, in \u001b[0;36mGroupMixin.add_command\u001b[0;34m(self, command)\u001b[0m\n\u001b[1;32m   1353\u001b[0m     command\u001b[39m.\u001b[39mparent \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\n\u001b[1;32m   1355\u001b[0m \u001b[39mif\u001b[39;00m command\u001b[39m.\u001b[39mname \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mall_commands:\n\u001b[0;32m-> 1356\u001b[0m     \u001b[39mraise\u001b[39;00m CommandRegistrationError(command\u001b[39m.\u001b[39mname)\n\u001b[1;32m   1358\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mall_commands[command\u001b[39m.\u001b[39mname] \u001b[39m=\u001b[39m command\n\u001b[1;32m   1359\u001b[0m \u001b[39mfor\u001b[39;00m alias \u001b[39min\u001b[39;00m command\u001b[39m.\u001b[39maliases:\n",
-      "\u001b[0;31mCommandRegistrationError\u001b[0m: The command mock is already an existing command or alias."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "@bot.command()\n",
     "async def mock(ctx, *args):\n",
@@ -325,24 +287,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "CommandRegistrationError",
-     "evalue": "The command mock is already an existing command or alias.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mCommandRegistrationError\u001b[0m                  Traceback (most recent call last)",
-      "\u001b[1;32m/Users/daniel/Documents/GitHub/hhs-ws-discord-bot/hhsbot.ipynb Cell 27\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/daniel/Documents/GitHub/hhs-ws-discord-bot/hhsbot.ipynb#Y323sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m@bot\u001b[39;49m\u001b[39m.\u001b[39;49mcommand()\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/daniel/Documents/GitHub/hhs-ws-discord-bot/hhsbot.ipynb#Y323sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39masync\u001b[39;49;00m \u001b[39mdef\u001b[39;49;00m \u001b[39mmock\u001b[39;49m(ctx, \u001b[39m*\u001b[39;49margs):\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/daniel/Documents/GitHub/hhs-ws-discord-bot/hhsbot.ipynb#Y323sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m   \u001b[39;49m\u001b[39m\"\"\"Responds with the given text with capitalization randomized\"\"\"\u001b[39;49;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/daniel/Documents/GitHub/hhs-ws-discord-bot/hhsbot.ipynb#Y323sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m    \u001b[39mawait\u001b[39;49;00m interaction\u001b[39m.\u001b[39;49mresponse\u001b[39m.\u001b[39;49msend_message(\u001b[39m\"\u001b[39;49m\u001b[39mexample\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
-      "File \u001b[0;32m~/miniforge3/envs/jupyter/lib/python3.9/site-packages/discord/ext/commands/core.py:1521\u001b[0m, in \u001b[0;36mGroupMixin.command.<locals>.decorator\u001b[0;34m(func)\u001b[0m\n\u001b[1;32m   1519\u001b[0m kwargs\u001b[39m.\u001b[39msetdefault(\u001b[39m'\u001b[39m\u001b[39mparent\u001b[39m\u001b[39m'\u001b[39m, \u001b[39mself\u001b[39m)\n\u001b[1;32m   1520\u001b[0m result \u001b[39m=\u001b[39m command(name\u001b[39m=\u001b[39mname, \u001b[39mcls\u001b[39m\u001b[39m=\u001b[39m\u001b[39mcls\u001b[39m, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)(func)\n\u001b[0;32m-> 1521\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49madd_command(result)\n\u001b[1;32m   1522\u001b[0m \u001b[39mreturn\u001b[39;00m result\n",
-      "File \u001b[0;32m~/miniforge3/envs/jupyter/lib/python3.9/site-packages/discord/ext/commands/bot.py:246\u001b[0m, in \u001b[0;36mBotBase.add_command\u001b[0;34m(self, command)\u001b[0m\n\u001b[1;32m    244\u001b[0m \u001b[39m@discord\u001b[39m\u001b[39m.\u001b[39mutils\u001b[39m.\u001b[39mcopy_doc(GroupMixin\u001b[39m.\u001b[39madd_command)\n\u001b[1;32m    245\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39madd_command\u001b[39m(\u001b[39mself\u001b[39m, command: Command[Any, \u001b[39m.\u001b[39m\u001b[39m.\u001b[39m\u001b[39m.\u001b[39m, Any], \u001b[39m/\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m--> 246\u001b[0m     \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49madd_command(command)\n\u001b[1;32m    247\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(command, (HybridCommand, HybridGroup)) \u001b[39mand\u001b[39;00m command\u001b[39m.\u001b[39mapp_command:\n\u001b[1;32m    248\u001b[0m         \u001b[39m# If a cog is also inheriting from app_commands.Group then it'll also\u001b[39;00m\n\u001b[1;32m    249\u001b[0m         \u001b[39m# add the hybrid commands as text commands, which would recursively add the\u001b[39;00m\n\u001b[1;32m    250\u001b[0m         \u001b[39m# hybrid commands as slash commands. This check just terminates that recursion\u001b[39;00m\n\u001b[1;32m    251\u001b[0m         \u001b[39m# from happening\u001b[39;00m\n\u001b[1;32m    252\u001b[0m         \u001b[39mif\u001b[39;00m command\u001b[39m.\u001b[39mcog \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mor\u001b[39;00m \u001b[39mnot\u001b[39;00m command\u001b[39m.\u001b[39mcog\u001b[39m.\u001b[39m__cog_is_app_commands_group__:\n",
-      "File \u001b[0;32m~/miniforge3/envs/jupyter/lib/python3.9/site-packages/discord/ext/commands/core.py:1356\u001b[0m, in \u001b[0;36mGroupMixin.add_command\u001b[0;34m(self, command)\u001b[0m\n\u001b[1;32m   1353\u001b[0m     command\u001b[39m.\u001b[39mparent \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\n\u001b[1;32m   1355\u001b[0m \u001b[39mif\u001b[39;00m command\u001b[39m.\u001b[39mname \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mall_commands:\n\u001b[0;32m-> 1356\u001b[0m     \u001b[39mraise\u001b[39;00m CommandRegistrationError(command\u001b[39m.\u001b[39mname)\n\u001b[1;32m   1358\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mall_commands[command\u001b[39m.\u001b[39mname] \u001b[39m=\u001b[39m command\n\u001b[1;32m   1359\u001b[0m \u001b[39mfor\u001b[39;00m alias \u001b[39min\u001b[39;00m command\u001b[39m.\u001b[39maliases:\n",
-      "\u001b[0;31mCommandRegistrationError\u001b[0m: The command mock is already an existing command or alias."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -357,15 +304,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
     "@bot.command()\n",
     "async def xkcd(ctx):\n",
     "   \"\"\"Responds with a random xkcd comic\"\"\"\n",
-    "   # your code here\n",
-    "   pass"
+    "   await ctx.send(\"https://xkcd.com/\"+str(random.randint(1,2827))+\"/\")"
    ]
   },
   {
@@ -380,15 +326,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
     "@bot.command()\n",
     "async def choose(ctx, *args):\n",
     "   \"\"\"Chooses a given option randomly\"\"\"\n",
-    "   # your code here\n",
-    "   pass"
+    "   a = random.randint(0, len(args)-1)\n",
+    "   await ctx.send(args[a])"
    ]
   },
   {
@@ -407,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
